hphp/hack/test/typecheck/new_inference/eager_solve/solve_nothing.php.like_types.exp
File "solve_nothing.php", line 26, characters 5-40:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "solve_nothing.php", line 10, characters 38-49:
Invalid assignment (Typing[4110])
File "solve_nothing.php", line 10, characters 13-36:
Expected (function(Tv): arraykey)
File "solve_nothing.php", line 10, characters 13-36:
But got dynamic because it is an unenforceable type
